--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Mishka</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="img/favicon.png" type="image/png" rel="shortcut icon">
-    <link rel="stylesheet" href="css/style.min.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
 <header class="page-header">
